# ha_ws_core

./: .gitignore  ADOPTION_REVIEW.md  ADOPTION_ROADMAP.md  CHANGELOG.md  CHANGELOG_v1.3.0.md  README.md  hacs.json  info.md  mkdocs.yml  pyproject.toml  pyproject.toml.BAK_20260217_170107  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  hacs.yml  release.yml  validate.yml
blueprints/: README.md  frost_alert.yaml  laundry_reminder.yaml  rain_notification.yaml  storm_warning.yaml
custom_components/ws_core/: __init__.py  algorithms.py  binary_sensor.py  config_flow.py  (+16 more)
dashboards/: README.md  weather_dashboard.yaml  weather_dashboard_vanilla.yaml  ws_core_dashboard.yaml  ws_core_dashboard_mobile.yaml  ws_core_gauge_presets.yaml
docs/: blueprints.md  contributing.md  dashboards.md  entity_map.html  forecast_providers.md  hardware_mapping.md  index.md  migrating_from_thermal_comfort.md  quickstart.md  science.md  sensors.md  troubleshooting.md
scripts/: generate_entity_map.py  validate_dashboard_entities.py
temp_check/: __init__.py  coordinator.py  manifest.json  sensor.py  services.yaml
tests/: __init__.py  conftest.py  test_algorithms.py  test_coordinator.py  test_french_sources.py  test_history_persistence.py  test_indoor_rooms.py  test_integration.py  test_localization.py  test_migration.py  test_nowcast.py  test_sensor_platform.py  test_streaks.py  test_uploaders.py
themes/: ws_core_dark.yaml  ws_core_light.yaml
(+57 files in other folders)
