[project]
name = "ha_ws_core"
version = "0.4.1"
description = "Weather Station Core - Home Assistant integration for personal weather stations"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "E701"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.ws_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
